frontend/test/should_pass/hom_016.grg
rule r {
	x: Node;
	y: Node;

	hom(x,y);

	replace {}
}

