frontend/test/should_fail/iterated_003.grg
test t
{
	x:Node;
	multiple
	{
		y:Node;
		hom(x,y);
		
		iterated 
		{
			z:Node;
			hom(y,z);
		}
	}
}